<resources>
    <string name="app_name">TrolleyMate</string>
    <string name="cold_drinks">COLD DRINKS</string>
    <string name="hot_drinks">HOT DRINKS</string>
    <string name="cold_snacks">COLD SNACKS</string>
    <string name="hot_snacks">HOT SNACKS</string>
    <string name="order_button">Add</string>
    <string name="view_button">View</string>
    <string name="home_button">Home</string>
    <string name="back_button">Back</string>
    <string name="order_page">Order</string>
    <string name="total">TOTAL          £</string>
    <string name="complete_order">COMPLETE</string>
</resources>
