<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/dark_green"
    tools:context=".Activities.OrderActivity">

    <TextView
        android:id="@+id/totalTextViewId"
        android:layout_width="170dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/total"
        android:textAlignment="textEnd"
        android:textSize="35sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/orderedItemsListViewId" />

    <TextView
        android:id="@+id/totalInPoundsTextViewId"
        android:layout_width="170dp"
        android:layout_height="50dp"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="27dp"
        android:textAlignment="viewStart"
        android:textSize="35sp"
        app:layout_constraintBottom_toTopOf="@+id/linTop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/orderedItemsListViewId"
        app:layout_constraintVertical_bias="0.128" />

    <LinearLayout
        android:id="@+id/linTop"
        android:layout_width="378dp"
        android:layout_height="94dp"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="132dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/orderedItemsListViewId">

        <Button
            android:id="@+id/completeButtonTextViewId"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/light_green"
            android:onClick="onCompleteButtonClick"
            android:text="@string/complete_order"
            android:textSize="30sp" />

        <Button
            android:id="@+id/homeButtonTextViewId"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/light_green"
            android:onClick="onHomeButtonClick"
            android:text="@string/home_button"
            android:textAlignment="center"
            android:textSize="30sp" />

    </LinearLayout>

    <ListView
        android:id="@+id/orderedItemsListViewId"
        android:layout_width="342dp"
        android:layout_height="402dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.513"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>